Fix buttons on small phones.

--- a/assets/sass/components/dashboard/_googlesitekit-subtle-notification.scss
+++ b/assets/sass/components/dashboard/_googlesitekit-subtle-notification.scss
@@ -79,11 +79,12 @@
 	.googlesitekit-subtle-notification__action {
 		align-items: center;
 		display: flex;
-		gap: $grid-gap-phone;
+		gap: 8px;
 		justify-content: center;
 		width: 100%;
 
 		@media (min-width: $bp-tablet) {
+			gap: $grid-gap-phone;
 			justify-content: initial;
 			width: initial;
 		}
